# SoftwareEngineeringProject

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  RunnerSetup.md  build.sh  run.sh
diagrams/: package_shared.puml  system_architecture.puml
help/: message_specification.md
src/client/: LobbyFrame.cpp  MovePhaseController.cpp  MovePhaseController.hpp  guiHelpers.cpp
src/server/: server.cpp  server.hpp
src/shared/: game_objects.cpp  game_objects.hpp  game_types.hpp  messages.hpp
tests/: test_game_components.cpp
the-hounds-main/: .gitignore
the-hounds-main/.gitlab/issue_templates/: Feature_Request.md
the-hounds-main/diagrams/: package_client.puml  package_server.puml  package_shared_messages.puml
the-hounds-main/src/client/: ConnectionFrame.cpp  ConnectionFrame.hpp  LobbyFrame.hpp  MainGamePanel.cpp  MainGamePanel.hpp  client.cpp  client.hpp  guiHelpers.hpp
the-hounds-main/src/server/: main.cpp
the-hounds-main/src/shared/: game.cpp  game.hpp  game_types.cpp  messages.cpp
the-hounds-main/tests/: test_game.cpp  test_messages.cpp
